fix: overflow and margin

--- a/src/components/FeaturesList/style.scss
+++ b/src/components/FeaturesList/style.scss
@@ -9,9 +9,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 
     & .h-2 {
+      margin-top: 125px;
+
+      @include tablet-only {
+        margin-top: 66px;
+      }
+
       @include mobile-only {
+        margin-top: 32px;
         margin-bottom: 20px;
       }
     }
@@ -115,7 +123,7 @@
         bottom: 0;
         width: 650px;
       }
-  
+
       @include md {
         margin-bottom: -7%;
       }
